# googlegenai

example/: README.md  create_meet.py  sample_meet.py
kaggle/: smartassistant.ipynb
smart_assistant/: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
smart_assistant/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
smart_assistant/src/smart_assistant/: __init__.py  cli.py
smart_assistant/tests/: __init__.py  test_smart_assistant.py
