[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart_assistant"
version = "0.1.0"
description = "A meeting calendar assistant."
readme = "README.rst"
authors = [
  {name = "GenAI Google Group", email = "genai@yenflow.com"}
]
maintainers = [
  {name = "GenAI Google Group", email = "genai@yenflow.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/bcncpp/smart_assistant/issues"
changelog = "https://github.com/bcncpp/smart_assistant/blob/master/changelog.md"
homepage = "https://github.com/bcncpp/smart_assistant"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

